added VSCode setup to READMe