@@ -1,2 +1,6 @@
 # WatchList
  Keeps track of shows watched + status of watching (complete, watching, waiting, etc.)
+## Setup (in VScode)
+Your launch.json must have the "vmArgs" javafx portion added (which is found on their website at: https://openjfx.io/openjfx-docs/#install-javafx )
+^As of 11/19/21, this is ""vmArgs": "--module-path C:/Users/(Insert User Here)/Downloads/openjfx-17.0.1_windows-x64_bin-sdk/javafx-sdk-17.0.1/lib --add-modules javafx.controls,javafx.fxml",
+Your settings.json will contain your reference libraries (which are the jsons downloaded from java fx sdk at: https://gluonhq.com/products/javafx/ ) <- this can be added manually via the 'Java Projects' tab once you have the proper extension in VScode (being the many java extensions from microsoft).
